# contracts

./: .gitignore  Cargo.toml  Makefile  README.md  shanaboo_solution.md  skills-lock.json
.github/workflows/: wasm-size.yml
benches/: swap_path.rs
contracts/adl_handler/: Cargo.toml
contracts/adl_handler/src/: lib.rs
contracts/data_store/: Cargo.toml
contracts/data_store/src/: lib.rs
contracts/data_store/test_snapshots/tests/: test_address_set_ops.1.json  test_apply_delta_to_u128.1.json  test_apply_delta_underflow.1.json  test_bool_crud.1.json  test_bytes32_set_ops.1.json  test_i128_crud.1.json  test_nonce.1.json  test_u128_crud.1.json
contracts/deposit_handler/: Cargo.toml
contracts/deposit_handler/src/: lib.rs
contracts/deposit_handler/test_snapshots/tests/: create_and_cancel_deposit.1.json  create_deposit_below_minimum_reverts_before_transfer.1.json  create_deposit_correct_tokens_succeeds.1.json  create_deposit_equal_to_minimum_succeeds.1.json  create_deposit_zero_minimum_allows_small_deposit.1.json  deposit_creation_event_has_all_fields.1.json  deposit_list_reflects_full_lifecycle.1.json  execute_deposit_below_min_market_tokens_reverts.1.json  execute_deposit_by_non_keeper_panics.1.json  execute_deposit_cleans_up_storage_and_lists.1.json  execute_deposit_long_only_pool_accounting.1.json  execute_deposit_mints_lp_tokens.1.json  execute_deposit_mixed_pool_accounting.1.json  execute_deposit_normal_token_unaffected_by_vault_check.1.json  execute_deposit_revert_leaves_state_unchanged.1.json  execute_deposit_reverts_when_vault_balance_below_recorded.1.json  execute_deposit_short_only_pool_accounting.1.json  first_deposit_mixed_no_divide_by_zero.1.json  first_deposit_short_only_no_divide_by_zero.1.json  second_deposit_uses_pool_price.1.json  vault_balance_invariant_after_execute_deposit.1.json
contracts/deposit_vault/: Cargo.toml
contracts/deposit_vault/src/: lib.rs
contracts/deposit_vault/test_snapshots/tests/: initialize_works.1.json
contracts/exchange_router/: Cargo.toml
contracts/exchange_router/src/: lib.rs
contracts/exchange_router/test_snapshots/tests/: cancel_deposit_succeeds_when_paused.1.json  create_deposit_reverts_when_paused.1.json  e2e_client_liquidation_healthy_reverts.1.json  e2e_client_liquidation_underwater_succeeds.1.json  e2e_deposit_then_withdraw_recovers_tokens.1.json  e2e_deposit_trade_withdraw_pool_accounting.1.json  e2e_multicall_failed_step_reverts_preceding_steps.1.json  e2e_multicall_send_tokens_then_create_order_succeeds.1.json  multicall_cancel_deposit_succeeds_when_paused.1.json  multicall_create_deposit_reverts_when_paused.1.json
contracts/fee_handler/: Cargo.toml
contracts/fee_handler/src/: lib.rs
contracts/insurance_fund_router/: Cargo.toml
contracts/insurance_fund_router/src/: lib.rs
contracts/insurance_fund_router/test_snapshots/tests/: cover_shortfall_panics_without_configured_market_pool.1.json  cover_shortfall_pays_only_the_configured_market_pool.1.json  (+2 more)
contracts/liquidation_handler/: Cargo.toml
contracts/liquidation_handler/src/: lib.rs
contracts/market_factory/: Cargo.toml
contracts/market_factory/src/: lib.rs
contracts/market_factory/test_snapshots/tests/: create_market_duplicate_token_triple_panics.1.json  test_initial_market_count.1.json  test_initialize.1.json
contracts/market_token/: Cargo.toml
contracts/market_token/src/: lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/order_handler/: Cargo.toml
contracts/order_handler/benches/: order_execution.rs
contracts/order_handler/src/: lib.rs
contracts/order_handler/tests/: borrowing_fee.rs  min_collateral_validation.rs  order_cancellation.rs  position_increase_from_profit.rs  price_impact_pool.rs  referral.rs  swap_path.rs
contracts/order_vault/: Cargo.toml
contracts/order_vault/src/: lib.rs
contracts/reader/: Cargo.toml
contracts/reader/src/: lib.rs
contracts/referral_storage/: Cargo.toml
contracts/referral_storage/src/: lib.rs
contracts/role_store/: Cargo.toml
contracts/role_store/src/: lib.rs
contracts/role_store/test_snapshots/tests/: test_all_roles_tracked.1.json  test_cannot_remove_last_admin.1.json  test_grant_and_revoke.1.json  test_idempotent_grant.1.json  test_role_member_enumeration.1.json
contracts/withdrawal_handler/: Cargo.toml
contracts/withdrawal_handler/src/: lib.rs
contracts/withdrawal_vault/: Cargo.toml
contracts/withdrawal_vault/src/: lib.rs
docs/: CONTRIBUTING.md  build.md  deployment.md  keeper-risk.md  liquidation-flow.md  oracle.md  swap_path_optimization.md
libs/decrease_position_utils/: Cargo.toml
libs/decrease_position_utils/src/: lib.rs
libs/increase_position_utils/: Cargo.toml
libs/increase_position_utils/src/: lib.rs
libs/keys/: Cargo.toml
libs/keys/src/: lib.rs
libs/market_utils/: Cargo.toml
libs/market_utils/src/: lib.rs
libs/math/: Cargo.toml
libs/math/src/: lib.rs
libs/position_utils/: Cargo.toml
libs/position_utils/src/: lib.rs
libs/pricing_utils/: Cargo.toml
libs/pricing_utils/src/: lib.rs
libs/swap_utils/: Cargo.toml
libs/swap_utils/src/: lib.rs
libs/types/: Cargo.toml
libs/types/src/: lib.rs
scripts/: compute_key.py  create_market.sh  deploy.sh  measure_sizes.sh  size_baseline.json
tests/: Cargo.toml  adl.rs  contract_upgrade.rs  funding_conservation_e2e.rs  funding_rate.rs  keeper_window.rs  lifecycle_long.rs  liquidation.rs  lp_fee_distribution.rs  multi_market_execution.rs  multi_market_funding_isolation.rs  oi_cap.rs  order_cancellation.rs  role_access_control.rs  short_position_lifecycle.rs  static_execution_price_spread.py  stop_loss.rs  take_profit.rs  zero_amount_validation.rs
tests/test_snapshots/: eth_funding_accumulates_while_btc_funding_stays_near_zero.1.json  lp_fees_split_proportionally_between_two_equal_depositors.1.json  short_position_lifecycle_close_pays_delegated_recipient_not_owner.1.json  short_position_lifecycle_losing_short_forfeits_collateral_to_pool.1.json  short_position_lifecycle_winning_short_pays_pnl_from_pool.1.json
(+57 files in other folders)
