[package]
name = "market-factory"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = { workspace = true }
gmx-types = { path = "../../libs/types" }
gmx-math = { path = "../../libs/math" }
gmx-keys = { path = "../../libs/keys" }
role-store = { path = "../role_store" }
data-store = { path = "../data_store" }
market-token = { path = "../market_token" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
role-store = { path = "../role_store" }
data-store = { path = "../data_store" }
market-token = { path = "../market_token" }
