[package]
name = "referral-storage"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = { workspace = true }
gmx-keys    = { path = "../../libs/keys" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
